优化TaskController，添加获取当前活动页面路径接口