@@ -115,8 +115,8 @@ public class TaskController {
      * 查询用户的待办任务
      */
     @GetMapping("/tasks/todo")
-    public R getTodoTasks(@RequestParam(required = false) String userId, 
-                         @RequestParam(required = false) String deptId) {
+    public R getTodoTasks(@RequestParam(required = false) String userId,
+                          @RequestParam(required = false) String deptId) {
         if (StringUtils.isBlank(userId) && StringUtils.isBlank(deptId)) {
             return R.error("用户ID和部门ID不能同时为空");
         }
@@ -127,8 +127,8 @@ public class TaskController {
      * 查询用户的已办任务
      */
     @GetMapping("/tasks/done")
-    public R getDoneTasks(@RequestParam(required = false) String userId, 
-                         @RequestParam(required = false) String deptId) {
+    public R getDoneTasks(@RequestParam(required = false) String userId,
+                          @RequestParam(required = false) String deptId) {
         if (StringUtils.isBlank(userId) && StringUtils.isBlank(deptId)) {
             return R.error("用户ID和部门ID不能同时为空");
         }
@@ -139,61 +139,64 @@ public class TaskController {
      * 查询用户的所有相关任务（包括待办和已办）
      */
     @GetMapping("/tasks/all")
-    public R getAllTasks(@RequestParam(required = false) String userId, 
-                        @RequestParam(required = false) String deptId) {
+    public R getAllTasks(@RequestParam(required = false) String userId,
+                         @RequestParam(required = false) String deptId) {
         if (StringUtils.isBlank(userId) && StringUtils.isBlank(deptId)) {
             return R.error("用户ID和部门ID不能同时为空");
         }
         return R.ok().put("data", taskService.getAllTasks(userId, deptId));
     }
 
+
+    /**
+     * 获取流程当前活动的页面路径
+     *
+     * @param businessId 业务ID
+     * @return 页面路径和操作按钮信息
+     */
+    @GetMapping("/getCurrentActivityPagePath")
+    public R getCurrentActivityPagePath(@RequestParam String businessId) {
+        // 1. 获取当前运行时任务
+        RuntimeTask currentTask = runtimeTaskRepository.findByBusinessIdAndStatus(businessId, TaskStatus.PENDING).orElse(null);
+
+        if (currentTask == null) {
+            return R.error("未找到相关任务");
+        }
+        // 2. 获取当前活动节点的页面路径和操作按钮
+        Activity activity = currentTask.getActivity();
+        return R.ok().put("data", activity.getPageUrl());
+    }
+
     /**
      * 获取流程当前活动的页面路径和操作按钮
-     * @param code 流程编码
+     *
      * @param businessId 业务ID
      * @return 页面路径和操作按钮信息
      */
     @GetMapping("/activity-info")
-    public R getActivityInfo(@RequestParam String code, @RequestParam String businessId) {
-        // 1. 根据流程编码获取最新版本的工作流
-        Workflow workflow = workflowRepository.findByCode(code)
-            .orElseThrow(() -> new RuntimeException("流程不存在"));
-        
-        // 2. 获取当前运行时任务
+    public R getActivityInfo(@RequestParam String businessId) {
+        // 1. 获取当前运行时任务
         RuntimeTask currentTask = runtimeTaskRepository
-            .findByBusinessIdAndStatus(businessId, TaskStatus.PENDING)
-            .orElse(null);
+                .findByBusinessIdAndStatus(businessId, TaskStatus.PENDING)
+                .orElse(null);
 
         if (currentTask == null) {
-            // 如果没有运行时任务，查询历史任务
-            List<HistoryTask> historyTasks = historyTaskRepository.findByBusinessId(businessId);
-            if (!historyTasks.isEmpty()) {
-                // 返回最后一个历史任务的信息
-                HistoryTask lastTask = historyTasks.get(historyTasks.size() - 1);
-                return R.ok().put("data", Map.of(
-                    "pageUrl", lastTask.getActivity().getPageUrl(),
-                    "operations", Collections.emptyList(),
-                    "status", lastTask.getStatus()
-                ));
-            }
             return R.error("未找到相关任务");
         }
 
-        // 3. 获取当前活动节点的页面路径和操作按钮
+        // 2. 获取当前活动节点的页面路径和操作按钮
         Activity activity = currentTask.getActivity();
         List<Map<String, String>> operations = Arrays.stream(activity.getOperations().split(","))
-            .map(op -> {
-                Map<String, String> opMap = new HashMap<>();
-                opMap.put("value", op);
-                opMap.put("label", TaskDecision.getOperateNameByName(op));
-                return opMap;
-            })
-            .collect(Collectors.toList());
+                .map(op -> {
+                    Map<String, String> opMap = new HashMap<>();
+                    opMap.put("value", op);
+                    opMap.put("label", TaskDecision.getOperateNameByName(op));
+                    return opMap;
+                }).toList();
 
         return R.ok().put("data", Map.of(
-            "pageUrl", activity.getPageUrl(),
-            "operations", operations,
-            "status", currentTask.getStatus()
+                "operations", operations,
+                "status", currentTask.getStatus()
         ));
     }
 } 
